# cargo_workspace_issue

./: Cargo.toml  README.md  build_and_test.sh
lib1/: Cargo.toml
lib2/: Cargo.toml  test.sqlite
lib2/src/: lib.rs
